apps/spark/ingress-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ui-master
  namespace: spark
spec:
  ingressClassName: nginx
  rules:
  - host: spark.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: { service: { name: spark-master-svc, port: { number: 8080 } } }
      - path: /app
        pathType: Prefix
        backend: { service: { name: spark-master-svc, port: { number: 8080 } } }
